[package]
name = "grq-map"
version = "0.0.0"
authors = ["JarredAllen <jarredallen73@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A mapping for Generic Range Queries (or GRQs for short)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
